--- a/.github/workflows/helm-release.yml
+++ b/.github/workflows/helm-release.yml
@@ -38,7 +38,7 @@ jobs:
           python-version: "3.12.0"
 
       - name: Set up chart-testing
-        uses: helm/chart-testing-action@v2.7.0
+        uses: helm/chart-testing-action@v2.6.1
         with:
           version: v3.9.0
           yamllint_version: 1.32.0
@@ -84,8 +84,10 @@ jobs:
     permissions:
       contents: write
       packages: write
-
     if: ${{ github.event_name != 'pull_request' }}
+    outputs:
+      chart_version: ${{ steps.set_version.outputs.chart_version }}
+      base64_hash: ${{ steps.hash.outputs.base64_hash }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -103,33 +105,54 @@ jobs:
           version: ${{ env.HELM_VERSION }}
 
       - name: Package Helm Chart
+        id: set_version
         env:
           CHART_DIR: "./chart"
         run: |
           cd ${CHART_DIR}
           helm dependency build
-          # Get the chart version
           CHART_VERSION=$(helm show chart . | grep '^version:' | cut -d' ' -f2)
-          echo "CHART_VERSION=${CHART_VERSION}" >> $GITHUB_ENV
+          echo "chart_version=$CHART_VERSION" >> $GITHUB_OUTPUT
           cd -
           helm package ${CHART_DIR} -d .helm-charts
+
+      - name: Compute chart hash (base64)
+        id: hash
+        run: |
+          sha256sum .helm-charts/sopseed-${{ steps.set_version.outputs.chart_version }}.tgz > .helm-charts/sopseed-${{ steps.set_version.outputs.chart_version }}.sha256
+          base64 .helm-charts/sopseed-${{ steps.set_version.outputs.chart_version }}.sha256 > .helm-charts/sopseed-${{ steps.set_version.outputs.chart_version }}.sha256.b64
+          echo "base64_hash=$(cat .helm-charts/sopseed-${{ steps.set_version.outputs.chart_version }}.sha256.b64)" >> $GITHUB_OUTPUT
 
       - name: Push Helm Chart to OCI Registry
         env:
           HELM_EXPERIMENTAL_OCI: 1
         run: |
           echo ${{ secrets.GITHUB_TOKEN }} | helm registry login ghcr.io --username ${{ github.actor }} --password-stdin
-          helm push .helm-charts/sopseed-${CHART_VERSION}.tgz oci://ghcr.io/${{ github.repository_owner }}/sopseed-chart
+          helm push .helm-charts/sopseed-${{ steps.set_version.outputs.chart_version }}.tgz oci://ghcr.io/${{ github.repository_owner }}/sopseed-chart
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
-          name: Release v${{ env.CHART_VERSION }}
-          tag_name: v${{ env.CHART_VERSION }}
+          name: Release v${{ steps.set_version.outputs.chart_version }}
+          tag_name: v${{ steps.set_version.outputs.chart_version }}
           draft: false
           prerelease: false
-          files: .helm-charts/sopseed-${{ env.CHART_VERSION }}.tgz
+          files: .helm-charts/sopseed-${{ steps.set_version.outputs.chart_version }}.tgz
           fail_on_unmatched_files: true
           generate_release_notes: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  provenance:
+    name: Generate SLSA Provenance for Helm Chart
+    needs: release
+    permissions:
+      actions: read
+      id-token: write
+      contents: write
+    if: startsWith(github.ref, 'refs/tags/')
+    uses: slsa-framework/slsa-github-generator/.github/workflows/generator_generic_slsa3.yml@v2.1.0
+    with:
+      base64-subjects: ${{ needs.release.outputs.base64_hash }}
+      upload-assets: true
+      upload-tag-name: v${{ needs.release.outputs.chart_version }}
