--- a/.github/workflows/oci-image-build.yml
+++ b/.github/workflows/oci-image-build.yml
@@ -150,3 +150,15 @@ jobs:
           repository: ${{ matrix.image.name }}
           short-description: 'An OCI image, for creating and managing GPG and Age keys'
           readme-filepath: ./helpers/README.md
+
+  provenance:
+    name: Generate SLSA Provenance
+    needs: [build]
+    if: startsWith(github.ref, 'refs/tags/')
+    uses: slsa-framework/slsa-github-generator/.github/workflows/generator_container_slsa3.yml@v2.1.0
+    with:
+      image: ghcr.io/${{ github.repository_owner }}/${{ matrix.image.name }}
+      digest: ${{ needs.build.outputs.digest }}
+      registry-username: ${{ github.actor }}
+    secrets:
+      registry-password: ${{ secrets.GITHUB_TOKEN }}
